--- a/Taxi/Taxi/Web.config
+++ b/Taxi/Taxi/Web.config
@@ -4,7 +4,22 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
   <system.web>
+    <authentication mode="Forms">
+      <forms name="Form_auth" 
+             loginUrl="~/Login/Login.aspx" 
+             protection="All" 
+             timeout="30" 
+             path="/" 
+             requireSSL="false" 
+             slidingExpiration="true"
+             cookieless="AutoDetect"
+             domain="DESKTOP-NMIE6R4"
+             defaultUrl="Default.aspx" />
+    </authentication>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
   </system.web>
