--- a/Taxi/Taxi/Web.config
+++ b/Taxi/Taxi/Web.config
@@ -8,6 +8,10 @@
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
   <system.web>
+    <authorization>
+      <!--<allow users="?" verbs="GET, POST" />-->
+      <deny users="?" verbs="GET, POST" />
+    </authorization>
     <authentication mode="Forms">
       <forms name="Form_auth" 
              loginUrl="~/Login/Login.aspx" 
